--- a/html/index.html
+++ b/html/index.html
@@ -256,10 +256,10 @@ $(document).ready(function(){
           <svg height="110" width="110">
                <circle cx="60" cy="60" r="40" stroke="black" stroke-width="3" fill="red" />
           </svg>
-          <svg height="150" width="350">
+          <svg height="150" width="350" id="rotate-3d">
                <polygon points="180,10 230,140 140,110" style="fill:lime;stroke:purple;stroke-width:1" />
           </svg>
-          <svg height="140" width="300">
+          <svg height="140" width="300" id="elipse-move">
                <ellipse cx="200" cy="80" rx="100" ry="50" style="fill:yellow;stroke:rgb(238, 139, 9);stroke-width:2" />
           </svg>
          </div>
