--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
          <!--responsive-->
          <meta name="viewport" content="width=device-width; initial-scale=1; maximum-scale=1">
          <link rel="icon" href="../images/autism.png"/>
-         <meta http-equiv="refresh" content="0;url=/html/index.html" />
+         <meta http-equiv="refresh" content="0;url=/INT20_21_Gr.8/html/index.html" />
     </head>
   
     <body>
