--- a/html/about.html
+++ b/html/about.html
@@ -296,10 +296,10 @@
          </div>
     
 
-<p id="demo"></p>
+<p id="koordinata" style="text-align: center; color:blueviolet;"></p>
 
 <script>
-var x = document.getElementById("demo");
+var x = document.getElementById("koordinata");
 
 function getLocation() {
   if (navigator.geolocation) {
